--- a/style.css
+++ b/style.css
@@ -1,15 +1,26 @@
 @import url('https://cdn.jsdelivr.net/gh/fxxk3rrth4ng/utils/fonts.css');
 
 body {
-    font-family: 'Pretendard JP Variable', 'Pretendard Variable' !important;
+	font-family: 'Pretendard JP Variable', 'Pretendard Variable' !important;
+	word-break: keep-all;
 }
 
-td.game, td.id {
-    width: 180px;
-    height: 1.5em
+.info {
+	position: absolute;
+	margin:auto;
+
+	height: 25em;
+	top: 50%;
+	margin-top: -12.5em;
+
+	width: 25em;
+	left: 50%;
+	margin-left: -25vw;
 }
 
-a {
-    color: inherit;
-    font-weight: bold;
+.info {
+	padding-left: 2em;
+	padding-top: 1em;
+	border: 1px solid #000;
+	border-radius: 2em;
 }
